Minor Syntax change

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ section {
   padding: 10px;
   border-radius: 8px;
   text-align: center;
-  transition: box-shadow 0.3s ease background-color 0.3s ease;
+  transition: box-shadow 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 수평, 수직 이동, 흐림 정도, 색상 */
 }
 
